# TrianglesIntersection

./: .clang-format  CMakeLists.txt  README.md
inc/: line.hpp  octree.hpp  plane.hpp  point.hpp  segment.hpp  tools.hpp  triangle.hpp  vector.hpp
src/: CMakeLists.txt  a.cpp  a.out  hui  line.cpp  line.hpp  lines_intersection_test.txt  main.cpp  octree.cpp  plane.cpp  plane.hpp  point.cpp  point.hpp  segment.cpp  segment.hpp  test.cpp  test.py  test.txt  test_tools.cpp  tools.cpp  tools.hpp  triangle.cpp  triangle.hpp  vector.cpp  vector.hpp
tests/: 1test.txt  3test.txt  CMakeLists.txt  answers_lines_int.txt  answers_segments_int.txt  run_tests  test.cpp  test.py  test_doubles.cpp  test_floats.cpp  test_generate.py  test_lines_intersection.py  test_planes_intersection.py  test_segments_intersection.py  tests_lines_int.txt  tests_segments_int.txt
tests/tests/: answer16.txt  test11.txt  test13.txt  test15.txt  test2.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
